Filters and Searching using LINQ

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "AppSetting": {
+    "Token":  "librarybackendmmstoken"
+  },
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost\\KREID; Database=LibraryDB; Trusted_Connection=true;"
   },
